Bert model upgrades and Homepage updates
1. Switched from Distillbert to Bert-base for the sentence comparison app. 
2. Downgraded from Distillbert to Albert for the Spam email detection app. 
3. Add project link on Homepage.

--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
         <h1 class="display-5">Welcome to Yu Liu's business applicaiton website empowered by machine learning models </h1>
         <p>The purpose of this site is to provide light-weight business applications to help business users swiftly resolve their 
             everyday business challenges. This is a continuously expending project and currently provides functions 
-            such as Spam Detection, Text Summary and Text Comparison. I'd love to hear ideas and feedbacks, please do not hesitate to contact
+            such as Spam Detection, Text Summary and Text Comparison. The project is open-sourced on my <a href='https://github.com/YuLiu83/Business-App'>github</a>. I'd love to hear ideas and feedbacks, please do not hesitate to contact
             me.
         </p>
         <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p> -->
